FIX spacing of checkboxes and radios

--- a/resources/scss/ceres/forms/_inputs.scss
+++ b/resources/scss/ceres/forms/_inputs.scss
@@ -303,6 +303,7 @@ $border-width: 1px;
 {
     transition: all .3s ease;
     cursor: pointer;
+    margin-bottom: .75rem;
 
     &.error
     {
